# Sysmatrix

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  info.md  progress.md  pyproject.toml
.github/workflows/: ci.yml
debian/: changelog  control  copyright  debhelper-build-stamp  install  sysmatrix.postinst.debhelper  sysmatrix.prerm.debhelper
docs/: README.md  architecture.md  collector-matrix.md  migration-notes.md  release-process.md
scripts/: sysmatrix
src/sysmatrix/: __init__.py  __main__.py  cli.py  config.py  defaults.py  models.py  snapshot.py
src/sysmatrix/collectors/: __init__.py  base.py  cpu.py  gpu.py  memory.py  motherboard.py  network.py  performance.py  storage.py  system.py
src/sysmatrix/renderers/: __init__.py  json_output.py  terminal_full.py  terminal_short.py  watch.py
src/sysmatrix/utils/: __init__.py  commands.py  formatting.py
tests/: conftest.py
tests/fixtures/collectors/: hostname_I_multiple.txt  ip_route_get_1_no_src.txt  ip_route_get_1_src.txt  lspci_amd.txt  sensors_amd.txt  smartctl_nvme_percentage_used.txt  smartctl_nvme_remaining_life.txt  smartctl_sata_media_wearout.txt  smartctl_sata_temperature_celsius.txt
tests/integration/: test_cli_modes.py
tests/unit/: test_collectors_parsing.py  test_render_json.py  test_render_short.py  test_snapshot_resilience.py
